@@ -1,0 +1,16 @@
+/* -*- C++ -*- */
+
+/* Time-stamp: <2010-12-17 12:57:17 Friday by sarlmolapple> */
+
+/**
+ * @file
+ * @author sarlmolapple
+ */
+#ifndef _OL_PLAYER_VLC_H
+
+#define _OL_PLAYER_VLC_H
+#include "ol_player.h"
+
+struct OlPlayer* ol_player_vlc_get();
+
+#endif /* _OL_PLAYER_VLC_H */
